# civics

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: keep-warm.yml
docs/design/: civiclens_design_specs.md  presentation_templates.md  prism_migration_spec.md  stitch_landing_page_design.html  stitch_loading_page.html  token_management.md
docs/presentation/: civiclens_closing_card.html  civiclens_privacy_card.html
docs/sprint/: civiclens_buildplan.md  week3_human_qa.md
docs/video/: recording_setup.md  scenarios.md  script.md  slides.md
docs/writeups/: kaggle_writeup.md
mobile/: .gitignore  AGENT1_README.md  ARCHITECTURE.md  PERFORMANCE.md  README.md  pubspec.yaml
mobile/integration_test/: b1_pipeline_test.dart  llama_test.dart  ocr_device_test.dart
mobile/ios/: Podfile  add_libllama.rb
mobile/lib/: main.dart
mobile/scripts/: README.md  build_llama_ios.sh  copy_model_to_device.sh  deploy_model_ios.sh  dev_deploy.sh  ios_attach_usb.sh  serve_model.sh  serve_model_http.py  sync_test_assets.sh  test_inference.dart  test_model_mac.dart
mobile/test/: blur_detector_test.dart  blur_detector_verification.dart  document_frame_detector_test.dart  image_processor_test.dart  response_parser_test.dart  widget_test.dart
research/eval/: README.md  (+16 more)
web_demo/: Dockerfile  README.md  api.py  app.py  blur_detector.py  deploy.py  inference.py  inference_backend.py  inference_common.py  inference_hf.py  inference_hf_api.py  label_formatting.py  prompts.py  requirements.txt  requirements_hf.txt  requirements_hf_api.txt  upload_utils.py
(+226 files in other folders)
